[gd_scene load_steps=14 format=2]

[ext_resource path="res://World/TouchScreen/Joystick/Joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Models/Ball/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/NewPlayer/Playa.gd" type="Script" id=3]
[ext_resource path="res://Font/AlloyInk-lgdWw.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Entities/NewPlayer/DisplayName.gd" type="Script" id=5]
[ext_resource path="res://Assets/Models/Characters/Character.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Audio/drop_003.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Audio/drop_004.ogg" type="AudioStream" id=11]
[ext_resource path="res://Entities/NewPlayer/Particles/WalkParticles.tscn" type="PackedScene" id=12]

[sub_resource type="SphereShape" id=17]
radius = 1.5

[sub_resource type="ViewportTexture" id=15]
viewport_path = NodePath("NameTag/DisplayName")

[sub_resource type="DynamicFont" id=14]
size = 70
outline_size = 2
outline_color = Color( 0.960784, 0.721569, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="SphereShape" id=18]
radius = 1.55

[node name="Playa" type="KinematicBody" groups=["PLAYER"]]
script = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )

[node name="MeshHolder" type="Position3D" parent="."]

[node name="Character" parent="MeshHolder" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.4504, 0.111694 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 17 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hold" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pos" type="Control" parent="UI/Hold"]
anchor_left = 0.0380859
anchor_right = 0.304688
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Joystick" parent="UI/Hold/Pos" instance=ExtResource( 1 )]
position = Vector2( 113, 474 )
scale = Vector2( 0.5, 0.5 )

[node name="NameTag" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.65921, 0 )
billboard = 1
texture = SubResource( 15 )

[node name="DisplayName" type="Viewport" parent="NameTag"]
size = Vector2( 233, 70 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 5 )

[node name="ID_label" type="Label" parent="NameTag/DisplayName"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 14 )
text = "ENEMY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detectorate" type="Area" parent="." groups=["Detect"]]

[node name="CollisionShape" type="CollisionShape" parent="Detectorate"]
shape = SubResource( 18 )

[node name="Bump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Death"]
wait_time = 0.2
one_shot = true

[node name="WalkParticles" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.22786, 0 )

[connection signal="area_entered" from="Detectorate" to="." method="_on_Detectorate_area_entered"]
[connection signal="timeout" from="Death/Timer" to="." method="_on_Timer_timeout"]
